tests/lime/fail/tokens/label_rest/byte_9.wsa
jmp .l	 .l	: push 9
